outputs_20260327-201500-ac6b17aa/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_j7oog7p3\src\gtm_tom_3_phase_inverter_pwm.c:90:13: error: 'interruptGtmTomPwm' defined but not used [-Werror=unused-function]
   90 | static void interruptGtmTomPwm(void)
      |             ^~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors

In file included from C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity.h:22,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_j7oog7p3\test\test_gtm_tom_3_phase_inverter_pwm.c:1:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_j7oog7p3\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G1_001_init_when_already_enabled_does_not_reconfigure_cmu':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_j7oog7p3\test\test_gtm_tom_3_phase_inverter_pwm.c:38:41: error: implicit declaration of function 'mock_IfxGtm_Cmu_setGclkFrequency_getCallCount'; did you mean 'mock_IfxGtm_Cmu_getModuleFrequency_getCallCount'? [-Wimplicit-function-declaration]
   38 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Cmu_setGclkFrequency_getCallCount(), "GCLK must not be reconfigured when already enabled");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_j7oog7p3\test\test_gtm_tom_3_phase_inverter_pwm.c:38:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
   38 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Cmu_setGclkFrequency_getCallCount(), "GCLK must not be reconfigured when already enabled");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_j7oog7p3\test\test_gtm_tom_3_phase_inverter_pwm.c:39:41: error: implicit declaration of function 'mock_IfxGtm_Cmu_setClkFrequency_getCallCount'; did you mean 'mock_IfxGtm_Cmu_getModuleFrequency_getCallCount'? [-Wimplicit-function-declaration]
   39 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Cmu_setClkFrequency_getCallCount(), "CLK0 must not be reconfigured when already enabled");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_j7oog7p3\test\test_gtm_tom_3_phase_inverter_pwm.c:39:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
   39 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Cmu_setClkFrequency_getCallCount(), "CLK0 must not be reconfigured when already enabled");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
